[-0.11726, 0.56929, -0.0020024, -0.35164, 0.089254, 0.12996, 0.0097024, 0.1676, -0.47347, -0.29363, 0.28187, 0.7616, -1.0858, -0.32471, 1.0486, 0.016114, 1.3236, 0.3414, 0.11616, 0.42417, 0.12062, -0.059236, 0.12888, -0.0076532, 0.72507, 0.53681, -0.40156, -0.17923, -0.51604, 0.8093, 0.51418, -0.83488, 0.42237, 0.048654, 0.63954, 0.23777, 0.34777, 0.13456, -0.33776, 0.1914, -0.47499, 0.38585, -0.59336, 0.40333, -0.12312, 0.45761, -0.20754, -0.22056, 0.15699, -0.04638, -1.0628, -0.18226, 0.083652, 0.63422, 0.5161, -0.48338, 0.56321, 0.27294, 0.017109, -0.13224, -0.17382, 1.1054, -0.37663, -0.23039, 1.9768, -0.23323, -0.29677, 0.029997, 0.27738, -0.44943, -0.25693, 0.019422, 0.53272, -0.43041, -1.4053, -0.73605, 1.0246, 1.1426, 0.32817, 0.4118, 0.35467, 0.36318, -0.49127, 0.62978, 1.3784, 0.60376, -0.36248, -1.3605, 0.74761, -0.37051, 0.024138, -0.034992, 0.22153, 0.40866, 1.0184, -0.070035, -0.1451, -0.21458, -0.12891, 0.13886]