[0.54674, 0.34195, -0.10716, -0.10419, -1.2678, 0.18387, -0.24225, -1.7756, -0.19448, -0.49206, -0.88401, 0.927, -0.25192, -0.48316, 0.023493, 0.46439, 1.822, 0.71012, -0.74026, 0.016474, -0.37152, -0.56709, -0.20931, -0.18376, 0.39002, 0.91443, -0.68909, 0.065774, 0.60975, 0.60414, 0.36555, -1.3086, -0.81752, 0.084296, -0.34454, 0.6977, -0.31133, -1.0969, -0.35186, -0.17911, -0.5339, -0.17349, -0.38005, 0.28088, -0.51303, -0.041357, 0.7976, -1.596, 0.13077, -0.51045]